[gd_scene load_steps=25 format=3 uid="uid://bkwdpgslvfnij"]

[ext_resource type="Script" uid="uid://cgrm7a1cmr656" path="res://scripts/melee_enemy.gd" id="1_xnaus"]
[ext_resource type="Texture2D" uid="uid://db0srg4uece2g" path="res://assets/animations/GroundEnemy/charge/charge.png" id="2_vaj5w"]
[ext_resource type="Texture2D" uid="uid://bm2j8g7ttimbq" path="res://assets/animations/GroundEnemy/walk/walk.png" id="3_8age4"]
[ext_resource type="Script" uid="uid://bg8idimb0wxxx" path="res://scripts/melee_enemy_hitbox.gd" id="3_vaj5w"]
[ext_resource type="Script" uid="uid://806oefs3q4b0" path="res://scripts/melee_enemy_hurtbox.gd" id="4_8age4"]
[ext_resource type="AudioStream" uid="uid://5chd16dvjy5o" path="res://assets/sound/hit-melee.wav" id="6_xcjf7"]
[ext_resource type="AudioStream" uid="uid://bmm3sf3jniysr" path="res://assets/sound/enemy_hurt.wav" id="7_x3ymb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md266"]
size = Vector2(80, 121.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulih"]
atlas = ExtResource("2_vaj5w")
region = Rect2(0, 0, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcjf7"]
atlas = ExtResource("2_vaj5w")
region = Rect2(2402, 0, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3ymb"]
atlas = ExtResource("2_vaj5w")
region = Rect2(0, 2402, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7tl4"]
atlas = ExtResource("2_vaj5w")
region = Rect2(2402, 2402, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_4trc7"]
atlas = ExtResource("2_vaj5w")
region = Rect2(4804, 0, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_xor78"]
atlas = ExtResource("2_vaj5w")
region = Rect2(4804, 2402, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hk04"]
atlas = ExtResource("2_vaj5w")
region = Rect2(0, 4804, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_34nm0"]
atlas = ExtResource("3_8age4")
region = Rect2(0, 0, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ppig"]
atlas = ExtResource("3_8age4")
region = Rect2(2402, 0, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5pw0"]
atlas = ExtResource("3_8age4")
region = Rect2(0, 2402, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_md266"]
atlas = ExtResource("3_8age4")
region = Rect2(2402, 2402, 2402, 2402)

[sub_resource type="AtlasTexture" id="AtlasTexture_57jc1"]
atlas = ExtResource("3_8age4")
region = Rect2(4804, 0, 2402, 2402)

[sub_resource type="SpriteFrames" id="SpriteFrames_c5pw0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcjf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3ymb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7tl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4trc7")
}],
"loop": false,
"name": &"approach",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xor78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hk04")
}],
"loop": false,
"name": &"hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34nm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ppig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5pw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md266")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57jc1")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_x3ymb"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeEnemy_Hurtbox/HurtboxShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeEnemy_Hitbox/HitboxShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RayCast2D:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitDead:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_t7tl4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeEnemy_Hurtbox/HurtboxShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeEnemy_Hitbox/HitboxShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RayCast2D:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitDead:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4trc7"]
_data = {
&"RESET": SubResource("Animation_t7tl4"),
&"dead": SubResource("Animation_x3ymb")
}

[node name="melee_enemy" type="Area2D"]
collision_layer = 4
script = ExtResource("1_xnaus")

[node name="MeleeEnemy_Hitbox" type="Area2D" parent="."]
position = Vector2(7.762497, -81.23752)
collision_layer = 32
collision_mask = 64
script = ExtResource("3_vaj5w")

[node name="HitboxShape" type="CollisionShape2D" parent="MeleeEnemy_Hitbox"]
position = Vector2(-1.762497, 53.875)
shape = SubResource("RectangleShape2D_md266")

[node name="MeleeEnemy_Hurtbox" type="Area2D" parent="."]
position = Vector2(7.762497, -81.23752)
collision_layer = 128
collision_mask = 24
script = ExtResource("4_8age4")

[node name="HurtboxShape" type="CollisionShape2D" parent="MeleeEnemy_Hurtbox"]
position = Vector2(-1, 53.875)
shape = SubResource("RectangleShape2D_md266")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-17.000002, -36.000004)
scale = Vector2(0.067, 0.067)
sprite_frames = SubResource("SpriteFrames_c5pw0")
animation = &"hit"
autoplay = "idle"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -28)
shape = SubResource("RectangleShape2D_md266")
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-53.237503, -31.237518)
target_position = Vector2(-233.7625, -1.7624817)
collision_mask = 2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(7.762497, -81.23752)

[node name="HitRanged" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_xcjf7")
volume_db = -8.0

[node name="HitDead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_x3ymb")
volume_db = -8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4trc7")
}

[connection signal="area_entered" from="MeleeEnemy_Hitbox" to="." method="_on_melee_enemy_hitbox_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
